tests/NormalTests/paczka1/fuzzy1/76198758.err
Error in line 1: A300 A891 25,1
Error in line 15: qfJ S288 33,9
Error in line 22: XgYJ S288 1,5
Error in line 21: A300 A891 24,9
Error in line 25: 6Xz1 S662 33,2
